force-app/main/default/objects/vlocity_ins__GroupCensusMember__c/fields/vlocity_ins__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Person Account</relationshipLabel>
    <relationshipName>Member_PersonAccount</relationshipName>
    <type>Lookup</type>
</CustomField>