force-app/main/default/objects/vlocity_ins__GroupCensusMember__c/fields/vlocity_ins__CensusId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CensusId__c</fullName>
    <label>Census</label>
    <referenceTo>vlocity_ins__GroupCensus__c</referenceTo>
    <relationshipLabel>Census Members</relationshipLabel>
    <relationshipName>Census_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>