force-app/main/default/objects/vlocity_ins__GroupCensusMember__c/fields/vlocity_ins__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Census Members</relationshipLabel>
    <relationshipName>Census_Members</relationshipName>
    <type>Lookup</type>
</CustomField>