force-app/main/default/objects/vlocity_ins__GroupCensusMember__c/fields/vlocity_ins__HasSpouse__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__HasSpouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse</label>
    <type>Checkbox</type>
</CustomField>