force-app/main/default/objects/vlocity_ins__GroupCensusMember__c/fields/vlocity_ins__IsFamily__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsFamily__c</fullName>
    <formula>IF(vlocity_ins__HasSpouse__c &amp;&amp; vlocity_ins__NumberOfDependents__c &gt;0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Family</label>
    <type>Checkbox</type>
</CustomField>