force-app/main/default/objects/vlocity_ins__GroupCensusMember__c/fields/vlocity_ins__IsOptOut__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if member does not enroll in any plan.</description>
    <label>Opt-out</label>
    <type>Checkbox</type>
</CustomField>