force-app/main/default/objects/vlocity_ins__GroupCensusMember__c/fields/vlocity_ins__OptOutTypes__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OptOutTypes__c</fullName>
    <label>Opt-out Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Medical Savings Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>