force-app/main/default/objects/vlocity_ins__GroupCensusMember__c/fields/vlocity_ins__RelatedCensusMemberId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RelatedCensusMemberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Census Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.vlocity_ins__CensusId__c</field>
            <operation>equals</operation>
            <valueField>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</valueField>
        </filterItems>
        <filterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__IsPrimaryMember__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ins__GroupCensusMember__c</referenceTo>
    <relationshipLabel>Census Members</relationshipLabel>
    <relationshipName>CensusMembers</relationshipName>
    <type>Lookup</type>
</CustomField>